# live-ad-detection

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHENTICATION.md  DEMO_GUIDE.md  DEPLOYMENT.md  ENTERPRISE_ROADMAP.md  IMPLEMENTATION_STATUS.md  INTEGRATED_SYSTEM.md  LICENSE  ML_WORKFLOW.md  MONOREPO_STRUCTURE.md  Makefile  PRODUCTION_TRAINING.md  QUICK_DEPLOY.md  README.md  ROADMAP.md  SETUP_GUIDE.md  VIDEO_PIPELINE_ARCHITECTURE.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
android-app/: .gitignore  AUTOMATIC_PIP.md  CODE_AUDIT.md  CRITICAL_FIXES_NEEDED.md  README.md  TDD_PROGRESS.md  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
config/: device_config.yaml
configs/training/: production-base.yaml  production-sports.yaml
deployment/: install.sh  inventory.yaml.example  setup_wizard.sh
deployment/config/: edge-device.env.example
deployment/docker/: .env.example  Dockerfile.cloud-api  docker-compose.yml  nginx.conf  prometheus.yml
deployment/scripts/: install-edge-device.sh  setup-wifi-ap.sh
deployment/systemd/: ad-detection-cloud-api.service  ad-detection-cluster.service  ad-detection-coordinator.service  ad-detection-edge.service  ad-detection-homescreen.service  ad-detection-web.service
docs/: AI_HAT_SETUP.md  FLEET_MANAGEMENT.md  getting-started.md
examples/: model_swap_demo.py  run_ad_detection.py  test_video_streams.py
infra/docker-compose/: .env.example  docker-compose.dev.yml
scripts/: bootstrap.sh  build-all.sh  deploy_all.sh  deploy_head.sh  deploy_node.sh  health_check.sh  setup.sh  start_ap.sh  stop_ap.sh  test-all.sh
services/: deploy_services.sh  docker-compose.yml  live-ad-detect.service
services/api-server/: Dockerfile  database.py  main.py  requirements.txt
services/content-platform/: .env.example  fix-validation.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
services/content-platform/src/: app.ts  server.ts
services/content-platform/src/__tests__/: StreamService.isolated.test.ts  app.test.ts  setup.ts  simple-app.test.ts
services/content-platform/src/components/: AnalyticsPanel.tsx  CreateStreamModal.tsx  DeviceCard.tsx  DeviceConnectionStatus.tsx  MobileDeviceManager.tsx  MobileRemoteControl.tsx  NotificationToast.tsx  PairingModal.tsx  StreamCard.tsx  StreamDashboard.tsx
services/content-platform/src/config/: auth.config.ts  monitoring.config.ts
services/content-platform/src/container/: DIContainer.ts
services/content-platform/src/contexts/: AuthContext.tsx  MobileDeviceContext.tsx  WebSocketContext.tsx
services/content-platform/src/controllers/: AdDetectionController.ts  AuthController.ts  BaseController.ts  ContentController.ts  PiPController.ts  ScheduleController.ts  WebSocketController.ts
services/content-platform/src/hooks/: useAuth.ts  useMobileDevice.ts  useWebSocket.ts
services/content-platform/web-ui/: package-lock.json  package.json
services/dashboard/: Dockerfile  README.md  package.json
services/dashboard/public/: index.html
services/dashboard/src/: App.css  App.js  index.css
services/data-collector/: Dockerfile  collector.py  requirements.txt
services/model-platform/: jest.config.js  package-lock.json  package.json  tsconfig.json
services/model-platform/src/: app.ts  test-setup.ts
services/postgres/: init.sql
services/prometheus/: prometheus.yml
services/shared/: README.md
src/live_ad_detection/: __init__.py
src/live_ad_detection/ai_hat/: __init__.py  ad_detector.py  channel_monitor.py  hailo_inference.py  model_manager.py  video_processor.py
src/live_ad_detection/config/: loader.py
src/live_ad_detection/device_info/: __init__.py  monitor.py
src/live_ad_detection/touchscreen_ui/: __init__.py  app.py
src/live_ad_detection/web_interface/: __init__.py  app.py
src/live_ad_detection/wifi_manager/: __init__.py  manager.py
tests/: __init__.py  conftest.py
tests/docker/: Dockerfile.test  docker-compose.test.yml  prometheus.yml
tests/integration/: test_full_system.py
tests/unit/: __init__.py  test_audio_manager.py  test_boot_config.py  test_cloud_client.py  test_compositor_types.py  test_content_sync.py  test_diagnostics.py  test_health_check.py  test_health_check_additional.py  test_model_deployment.py  test_prometheus_exporter.py  test_shutdown_handler.py  test_system_monitor.py  test_system_monitor_additional.py
(+218 files in other folders)
